refactor: tailwind colors & app css

--- a/src/app.css
+++ b/src/app.css
@@ -10,8 +10,8 @@
 }
 
 html {
-	font-family: 'Oswald';
-	@apply text-gold bg-black;
+	font-family: monospace;;
+	@apply text-foreground-secondary bg-background text-sm;
 	color-scheme: dark;
 }
 
@@ -29,5 +29,5 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-	@apply bg-gold rounded-lg;
+	@apply bg-foreground-secondary rounded-lg;
 }
